update some issues